# song-search-rust-openai

./: README.md  docker-compose.data.yaml  docker-compose.yaml
song-search/: Cargo.toml
song-search/data/input/: ArianaGrande.csv  BTS.csv  Beyonce.csv  BillieEilish.csv  CardiB.csv  CharliePuth.csv  Drake.csv  DuaLipa.csv  EdSheeran.csv  Eminem.csv  JustinBieber.csv  KatyPerry.csv  Khalid.csv  LadyGaga.csv  Maroon5.csv  NickiMinaj.csv  PostMalone.csv  Rihanna.csv  SelenaGomez.csv  TaylorSwift.csv
song-search/src/: create-song-embeddings.rs  lib.rs  query-song-faiss.rs  query-song.rs
