[package]
name = "song-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-openai = "0.5.0"
csv = "1.1.6"
hora = { version = "0.1.1"}
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
tokio = {version = "1.23.0", features = ["rt-multi-thread"]}

[[bin]]
name = "create-song-embeddings"
path = "src/create-song-embeddings.rs"

[[bin]]
name = "query-song"
path = "src/query-song.rs"
