[package]
name = "song-search"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.68"
async-openai = "0.5.0"
backoff = { version = "0.4.0", features = ["tokio"] }
csv = "1.1.6"
futures = "0.3.25"
pgvector = { version = "0.2.0", features = ["sqlx"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = {version = "1.23.0", features = ["rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[[bin]]
name = "create-song-embeddings"
path = "src/create-song-embeddings.rs"

[[bin]]
name = "query-song"
path = "src/query-song.rs"
